--- a/src/footer.html
+++ b/src/footer.html
@@ -587,3 +587,326 @@
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
+
+
+  <!doctype html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Мейер и партнеры: адвокаты, Волгоград.</title>
+  <link href="../dist/output.css" rel="stylesheet">
+  <link href="../script.css" rel="stylesheet">
+  <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+</head>
+
+<body class="flex flex-col bg-gray-200">
+  <header class="flex justify-between inset-0 h-12 bg-white">
+    <ul class="flex items-center px-96">
+      <li>
+        <i class="fas fa-phone-alt"></i>
+        <a href="tel:+7 8442 97 82 97" class="inline-block pr-4 pl-4 font-serif">(8442) 97-82-97</a>
+      </li>
+      <li>
+        <i class="fa fa-envelope"></i>
+        <a href="mailto:info@meyer-law.ru" class="inline-block pr-2 pl-4 font-serif">info@meyer-law.ru</a>
+      </li>
+    </ul>
+
+
+    <ul class="flex items-start py-1 pr-96">
+      <li>
+        <i class="fas fa-map-marker-alt"></i>
+        <p class="font-serif">400001, г. Волгоград, ул. Профсоюзная, 15а</p>
+      </li>
+    </ul>
+  </header>
+  <div class="ml-96"><a href="index.html">
+      <img class="" src="../img/logo.png" alt="img">
+    </a></div>
+  <div class="flex flex-wrap ml-[950px] -mt-16 w-1/2">
+    <ul class="flex justify-around space-x-6">
+      <li class="active"><a href="index.html">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            О нас</p>
+        </a></li>
+      <li><a href="ourSkill.html">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Наш опыт</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/news/all">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Новости</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/news/facts">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Интересные факты</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/page/search">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Поиск</p>
+        </a></li>
+    </ul>
+    <ul class="flex justify-around space-x-6">
+      <li><a href="http://www.meyer-law.ru/page/probono">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Pro bono</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/page/reviews">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Отзывы</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/page/contests">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Конкурс «Мейера»</p>
+        </a></li>
+      <li><a href="http://www.meyer-law.ru/page/contact">
+          <p class="font-serif text-xl text-gray-500 font-medium border hover:border-slate-800 transition duration-300">
+            Контакты</p>
+        </a></li>
+    </ul>
+  </div>
+  <!-- Slider main container -->
+  <div class="image_swiper swiper mt-4 w-full">
+    <div class="swiper-wrapper h-2">
+      <div class="swiper-slide">
+        <img src="../img/slide-1.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-3.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-4.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-5.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-6.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-7.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-8.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-9.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-10.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-11.jpg" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="../img/slide-12.jpg" alt="">
+      </div>
+    </div>
+    <div class="swiper-button-prev ml-8"></div>
+    <div class="swiper-button-next mr-8"></div>
+  </div>
+  <div class="mt-14 ml-96 mr-[780px] bg-white">
+    <div class="bg-gray-600">
+      <h2>
+        <p class="font-serif text-xl text-white font-medium ml-2 py-2">
+          О нас</p>
+      </h2>
+    </div>
+    <div class="text-left ml-2 mr-2">
+      <div class="icon-box py-2">
+        <div class="frame"><img src="../img/peoples.jpg" alt="img"></div>
+      </div>
+      <h3 class="font-serif text-xl text-black font-semibold inline-block align-text-top ml-80 -mt-[170px]">Дорогие
+        друзья!</h3>
+      <p class="font-serif text-base text-black font-thin indent-5 ml-48 -mt-36 tracking-wide">Добро пожаловать на
+        сайт Волгоградской коллегии адвокатов «Мейер и партнеры».
+        Свою деятельность мы ведём с 1994 года. Сегодня команда «Мейер и партнеры» – это 34 юриста, 14 из которых
+        имеют адвокатский статус.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide ml-48">Основной специализацией
+        команды «Мейер и партнеры»</p>
+      <p class="font-serif text-base text-black font-thin tracking-wide">является сопровождение
+        процедур несостоятельности (банкротства) компаний, представляющих средний и крупный бизнес. Опыт работы
+        позволяет нам успешно отстаивать интересы клиентов в этой сфере, вне зависимости от их статуса – должника
+        или кредитора.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">Однако сферой несостоятельности
+        (банкротства) наша деятельность не
+        ограничивается. Команда «Мейер и партнеры» также положительно зарекомендовала себя в проектах, связанных с
+        представлением интересов клиентов в сфере налогов, транспорта, энергетики, интеллектуальной собственности,
+        строительства и кредитования.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">Мы ежегодно принимаем участие в
+        более чем 2000 судебных процессов. Адвокаты
+        «Мейер и партнеры» признаются лучшими специалистами в выработке стратегии ведения судебных споров. При этом
+        в состав нашей команды входят не только профессиональные адвокаты, но и медиаторы, третейские судьи,
+        эксперты и специалисты, что позволяет оказывать юридическую помощь комплексно, добиваться положительного
+        результата всего проекта и выполнять задачи, которые ставят перед нами клиенты.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">Коллегия адвокатов «Мейер и
+        партнеры» на протяжении нескольких лет получает
+        признание на общероссийском и международном уровне. Мы являемся постоянным участником рейтингов
+        «Право.Ru-300», Legal 500 и Chambers.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">В отношениях с каждым клиентом
+        команда «Мейер и партнеры» придерживается
+        принципа полной доверительности и рассматривает каждую проблему как специальный проект, требующий
+        индивидуального подхода. Мы строго соблюдаем правило адвокатской тайны и публично пресекаем любые попытки её
+        нарушения.</p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">На нашем сайте размещена информация,
+        касающаяся наших практик, достижений и
+        побед. Вы сможете также получить представление о членах нашей команды, ознакомиться с условиями учрежденного
+        нами конкурса студенческих работ им. Д.И. Мейера и почерпнуть много других полезных и интересных сведений.
+      </p>
+      <p class="font-serif text-base text-black font-thin indent-5 tracking-wide">На все возникшие вопросы мы с
+        удовольствием ответим Вам в нашем офисе при
+        личной встрече.</p>
+      <p class="text-right font-serif text-base text-black font-thin tracking-wide">Управляющие партнеры</p>
+      <p class="text-right font-serif text-base text-black font-thin tracking-wide">Олег Коробов и Олег Елкин</p>
+    </div>
+  </div>
+  
+  <div class="-mt-[913px] ml-[1150px] mr-96 bg-white">
+    <div class="bg-gray-600">
+      <h2>
+        <p class="font-serif text-xl text-white font-medium ml-2 py-2">
+          Новости</p>
+      </h2>
+    </div>
+    <div class=" ml-2">
+      <div class="w-1/2 mt-8">
+        <a href="http://www.meyer-law.ru/news/445">
+          <img src="../img/flowers.jpg" alt="img">
+        </a>
+      </div>
+      <div class="flex justify-end mr-2 -mt-24">
+        <h3><a href="http://www.meyer-law.ru/news/445">
+            <p class="font-sans text-base text-black font-medium tracking-wide">31.05.2022
+          </a></h3>
+      </div>
+      <span style="float:right;" class="mt-12 mr-2 text-red-900 hover:underline"><a
+          href="http://www.meyer-law.ru/news/445">Открыть
+          новость</a></span>
+      <div class="w-1/2 mt-28">
+        <a href="http://www.meyer-law.ru/news/444">
+          <img src="../img/66.jpg" alt="img">
+        </a>
+      </div>
+      <div class="flex justify-end mr-2 -mt-64">
+        <h3><a href="http://www.meyer-law.ru/news/444">
+            <p class="font-sans text-base text-black font-medium tracking-wide">26.04.2022
+          </a></h3>
+      </div>
+      <p class="text-left ml-52 font-serif text-base text-black font-thin tracking-wide">«Момент возникновения
+        обязанности контролирующих лиц сообщить о финансовых трудностях
+        организации».</p>
+      <span style="float:right;" class="mt-4 mr-2 text-red-900 hover:underline"><a
+          href="http://www.meyer-law.ru/news/444">Открыть
+          новость</a></span>
+      <div class="mt-20 mb-2">
+        <span style="text-align:left;" class="text-red-900 hover:underline uppercase tracking-tight"><a
+            href="http://www.meyer-law.ru/news/all">Все
+            новости <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a></span>
+      </div>
+    </div>
+  </div>
+
+
+
+  <footer>
+    <section class="place-content-between">
+      <div class="container mx-[400px] mt-[420px]">
+        <div class="flex flex-row">
+            <div class="columns-md columns-sm-3">
+              <div class="columns-md columns-sm-6 columns-xs-6">
+                <img
+                  src="http://www.meyer-law.ru/core/views/meyer/images/brand-1.png">
+              </div>
+              <div class="columns-md columns-sm-6 columns-xs-6">
+                <img class="ml-32 -mt-24"
+                  src="http://www.meyer-law.ru/core/views/meyer/images/brand-2.png">
+              </div>
+              <div class="columns-md columns-sm-6">
+                <img class="-mt-24" src="http://www.meyer-law.ru/core/views/meyer/images/brand-3.png">
+              </div>
+          </div>
+
+          <div class="flex flex-wrap mr-[650px] columns-md columns-sm-9">
+            <div class="flex justify-around w-1/2 columns-md columns-sm-3">
+                <ul class="">
+                  <li><a href="http://www.meyer-law.ru/page/practice-bank">Банкротство</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-ispol-pravo">Исполнительное право</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-arbitrag">Арбитражный процесс</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-nalog-pravo">Налоговое право</a></li>
+                </ul>
+            </div>
+            <div class="flex justify-around columns-md columns-sm-6">
+                <ul class="">
+                  <li><a href="http://www.meyer-law.ru/page/practice-stroit">Строительство и недвижимость</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-antimonopol">Антимонопольное
+                      регулирование</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-prirod-resurs">Природные ресурсы.
+                      Энергетика</a></li>
+                  <li><a href="http://www.meyer-law.ru/page/practice-korporat-pravo">Корпоративное право</a></li>
+                </ul>
+            </div>
+            <div class="flex items-stretch columns-md-6 columns-sm">
+              <div class="columns-md-6 columns-sm columns-xs">
+                <noindex><a href="http://www.fparf.ru/" rel="nofollow" target="_blank"><img
+                      src="http://www.meyer-law.ru/core/views/meyer/images/gerb.png"></a></noindex>
+              </div>
+              <div class="columns-md columns-sm-12 columns-xs-12">
+                <noindex><a href="http://www.apvo-volgograd.ru/" rel="nofollow" target="_blank"><img
+                      src="http://www.meyer-law.ru/core/views/meyer/images/logo-(1).png"></a></noindex>
+              </div>
+            </div>
+
+            <div class="col-md-12 col-sm-12">
+              <div class="col-md-6 col-sm-6">
+                <div class="cp-contacts-section"> 400001, г. Волгоград, ул. Профсоюзная, 15а.<br>
+                  info@meyer-law.ru</div>
+              </div>
+              <div class="col-md-6 col-sm-6">
+                <div class="cp-copyright-section"> <strong class="copy">Адвокаты, Волгоград<br> © «Мейер и
+                    партнеры»</strong> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="clearfix"></div>
+
+  </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="flex justify-center mt-[808px] py-3">
+    <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-500 border-slate-800 w-1/6 py-2
+       text-left pl-4 text-slate-800 focus:outline-none">
+    <a href="#subscribe_form" class="text-center text-red-700 font-bold hover:bg-red-700 hover:text-white
+        hover:border-white py-2 w-2/12 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
+      на новости</a>
+  </div>
+
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="../script.js"></script>
+
+
+</body>
+
+</html>
