--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,10 @@
                 Наш опыт
             </a>
           </li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/news/all">
+          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="news.html">
                 Новости
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/news/facts">
+          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="interestsFacts.html">
                 Интересные
                 факты
             </a></li>
@@ -253,7 +253,7 @@
                       новость</a></span>
                   <div class="mt-36 mb-2">
                     <span style="text-align:left;"><a class="text-red-900 hover:underline uppercase tracking-tight hover:text-red-900"
-                        href="http://www.meyer-law.ru/news/all">Все
+                        href="news.html">Все
                         новости <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a></span>
                   </div>
                 </div>
@@ -378,7 +378,7 @@
             <div class=" ml-[400px] text-center news-pod py-3">
               <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal border-slate-800 w-1/2 py-2
                 text-left pl-4 text-slate-800 focus:outline-none">
-              <a href="#subscribe_form" class="text-center text-red-700 font-bold hover:bg-red-700 hover:text-white
+              <a href="#subscribe_form" class="text-center text-red-700 font-bold hover:bg-red-700 hover:text-white hover:no-underline
                  hover:border-white py-2 w-1/4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
                 на новости</a>
             </div>
