Теперь на страницах О нас, Наш Опыт и Новости все загружено локально

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,9 @@
   <link href="../dist/output.css" rel="stylesheet">
   <link href="../script.css" rel="stylesheet">
   <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-
-
-  <link href="http://www.meyer-law.ru/core/views/meyer/css/custom.css" rel="stylesheet" type="text/css">
-  <link href="http://www.meyer-law.ru/core/views/meyer/css/bootstrap.css" rel="stylesheet" type="text/css">
-
+  <link rel="stylesheet" href="../swiper/tailwind.css">
+  <link rel="stylesheet" href="../swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="../swiper/custom.css">
 </head>
 
 
@@ -230,7 +227,7 @@
                         31.05.2022
                       </a></h3>
                   </div>
-                  <span style="float:right;"><a class="mt-14 mr-2 text-red-900 hover:underline hover:text-red-900"
+                  <span style="float:right;"><a class="mt-14 mr-2 text-2xl text-red-900 hover:underline hover:text-red-900"
                       href="http://www.meyer-law.ru/news/445">Открыть
                       новость</a></span>
                   <div class="w-1/2 mt-40">
@@ -248,11 +245,11 @@
                   <p class="text-left ml-80 font-serif text-2xl text-black font-thin tracking-wide">«Момент возникновения
                     обязанности контролирующих лиц сообщить о финансовых трудностях
                     организации».</p>
-                  <span style="float:right;"><a class="mt-14 mr-2 text-red-900 hover:underline hover:text-red-900"
+                  <span style="float:right;"><a class="mt-14 mr-2 text-2xl text-red-900 hover:underline hover:text-red-900"
                       href="http://www.meyer-law.ru/news/444">Открыть
                       новость</a></span>
                   <div class="mt-36 mb-2">
-                    <span style="text-align:left;"><a class="text-red-900 hover:underline uppercase tracking-tight hover:text-red-900"
+                    <span style="text-align:left;"><a class="text-red-900 text-2xl hover:underline uppercase tracking-tight hover:text-red-900"
                         href="news.html">Все
                         новости <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a></span>
                   </div>
@@ -262,7 +259,6 @@
         </div>
       </div>
     </section>
-
 
 		<footer>
 			<section class="cp-footer-content">
@@ -374,12 +370,12 @@
     <div class="relative">
       <div class="fixed bottom-0 left-0 right-0 bg-gray-200">
         <div class="container mx-auto">
-          <div class="flex flex-row">
+          <div class="flex flex-row w-4/5">
             <div class=" ml-[400px] text-center news-pod py-3">
-              <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal border-slate-800 w-1/2 py-2
+              <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal text-3xl border-slate-800 py-4
                 text-left pl-4 text-slate-800 focus:outline-none">
-              <a href="#subscribe_form" class="text-center text-red-700 font-bold hover:bg-red-700 hover:text-white hover:no-underline
-                 hover:border-white py-2 w-1/4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
+              <a href="#subscribe_form" class="text-center text-3xl text-red-700 font-medium hover:bg-red-700 hover:text-white hover:no-underline
+                 hover:border-white py-4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
                 на новости</a>
             </div>
           </div>
@@ -391,7 +387,7 @@
   </div>
 
 
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="../swiper/swiper-bundle.min.js"></script>
   <script src="../script.js"></script>
 </body>
 
