--- a/src/news.html
+++ b/src/news.html
@@ -10,11 +10,8 @@
     <link href="../dist/output.css" rel="stylesheet">
     <link href="../script.css" rel="stylesheet">
     <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-
-
-    <link href="http://www.meyer-law.ru/core/views/meyer/css/custom.css" rel="stylesheet" type="text/css">
-    <link href="http://www.meyer-law.ru/core/views/meyer/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../swiper/tailwind.css">
+    <link rel="stylesheet" href="../swiper/custom.css">
 
 </head>
 
@@ -118,7 +115,7 @@
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/445">
                                 <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_069f63df9dd18b58a130232bdb98325a.jpg">
+                                    src="../img/flowers.jpg">
                             </a>
                         </div>
                     </div>
@@ -144,7 +141,7 @@
                     <div class="columns-md-5">
                         <div>
                             <a href="http://www.meyer-law.ru/news/444">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png">
+                                <img src="../img/news-img.png">
                             </a>
                         </div>
                     </div>
@@ -176,7 +173,7 @@
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/443">
                                 <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_24c4a08217540dc64a43e505e99e6506.jpg"></a>
+                                    src="../img/cookies.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -201,7 +198,7 @@
                         <div class="columns-md-5">
                             <div>
                                 <a href="http://www.meyer-law.ru/news/442">
-                                    <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png">
+                                    <img src="../img/news-img.png">
                                 </a>
                             </div>
                         </div>
@@ -233,7 +230,7 @@
                         <div class="columns-md-5">
                             <div>
                                 <a href="http://www.meyer-law.ru/news/441">
-                                    <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png"></a>
+                                    <img src="../img/news-img.png"></a>
                             </div>
                         </div>
                         <div class="w-2/3">
@@ -260,7 +257,7 @@
                         <div class="columns-md-5">
                             <div>
                                 <a href="http://www.meyer-law.ru/news/440">
-                                    <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png"></a>
+                                    <img src="../img/news-img.png"></a>
                             </div>
                         </div>
                         <div class="w-2/3">
@@ -289,7 +286,7 @@
                         <div class="columns-md-5">
                             <div>
                                 <a href="http://www.meyer-law.ru/news/439">
-                                    <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png"></a>
+                                    <img src="../img/news-img.png"></a>
                             </div>
                         </div>
                         <div class="w-2/3">
@@ -321,7 +318,7 @@
                             <div class="w-[410px]">
                                 <a href="http://www.meyer-law.ru/news/438">
                                     <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_30eff7b5982035cce466f68f5d1d388d.jpg"></a>
+                                    src="../img/teachers.jpg"></a>
                             </div>
                         </div>
                         <div class="w-full">
@@ -352,7 +349,7 @@
                             <div class="w-[410px]">
                                 <a href="http://www.meyer-law.ru/news/436">
                                     <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_6bad7d7a81a2813526dde656dc8aacf2.jpg"></a>
+                                    src="../img/students.jpg"></a>
                             </div>
                         </div>
                         <div class="w-full">
@@ -383,7 +380,7 @@
                         <div>
                             <a href="http://www.meyer-law.ru/news/434">
 
-                                <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png">
+                                <img src="../img/news-img.png">
                             </a>
                         </div>
                     </div>
