--- a/src/ourSkill.html
+++ b/src/ourSkill.html
@@ -8,12 +8,11 @@
 
 	<link href="../dist/output.css" rel="stylesheet">
 	<link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="../swiper/custom.css">
+	<link rel="stylesheet" href="../swiper/tailwind.css">
 
 
-	<link href="http://www.meyer-law.ru/core/views/meyer/css/custom.css" rel="stylesheet" type="text/css">
-	<link href="http://www.meyer-law.ru/core/views/meyer/css/bootstrap.css" rel="stylesheet" type="text/css">
-
-
+	<!-- Скрипты, отвечающие за карту (взято с сайта)-->
 	<script src="http://www.meyer-law.ru/core/views/meyer/js/jquery-1.11.3.min.js"></script>
 	<script src="http://www.meyer-law.ru/core/views/meyer/js/sticky.js"></script>
 </head>
@@ -85,6 +84,7 @@
 	</header>
 
 
+	<!-- Скрипты, связанные с картой (взято с сайта)-->
 	<script src="http://www.meyer-law.ru/core/views/meyer/js/map/js/jquery.vmap.js" type="text/javascript">
 	</script>
 
@@ -921,22 +921,22 @@
 		</section>
 
 	</footer>
-	<div class="relative">
+    <div class="relative">
 		<div class="fixed bottom-0 left-0 right-0 bg-gray-200">
-			<div class="container mx-auto">
-				<div class="flex flex-row">
-					<div class=" ml-[400px] text-center news-pod py-3">
-						<input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal border-slate-800 w-1/2 py-2
-							text-left pl-4 text-slate-800 focus:outline-none">
-						<a href="#subscribe_form" class="text-center text-red-700 font-bold hover:bg-red-700 hover:text-white hover:no-underline
-							 hover:border-white py-2 w-1/4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
-							на новости</a>
-					</div>
-				</div>
+		  <div class="container mx-auto">
+			<div class="flex flex-row w-4/5">
+			  <div class=" ml-[400px] text-center news-pod py-3">
+				<input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal text-3xl border-slate-800 py-4
+				  text-left pl-4 text-slate-800 focus:outline-none">
+				<a href="#subscribe_form" class="text-center text-3xl text-red-700 font-medium hover:bg-red-700 hover:text-white hover:no-underline
+				   hover:border-white py-4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
+				  на новости</a>
+			  </div>
 			</div>
+		  </div>
 		</div>
-
-	</div>
+	
+	  </div>
 
 
 	<script>
