Исправлена Подписка на новости

--- a/src/index.html
+++ b/src/index.html
@@ -370,8 +370,8 @@
     <div class="relative">
       <div class="fixed bottom-0 left-0 right-0 bg-gray-200">
         <div class="container mx-auto">
-          <div class="flex flex-row w-4/5">
-            <div class=" ml-[400px] text-center news-pod py-3">
+          <div class="flex flex-row w-full">
+            <div class="columns-md-12 col-sm-12 text-center news-pod py-3">
               <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal text-3xl border-slate-800 py-4
                 text-left pl-4 text-slate-800 focus:outline-none">
               <a href="#subscribe_form" class="text-center text-3xl text-red-700 font-medium hover:bg-red-700 hover:text-white hover:no-underline
