Все коряво добавлено кроме Архивов новостей и интересных фактов

--- a/src/news.html
+++ b/src/news.html
@@ -19,77 +19,79 @@
 <body class="flex flex-col bg-gray-200">
     <header inset-0 h-12>
         <section class="cp-head-topbar">
-            <div class="container mx-auto">
-                <div class="flex flex-row">
-                    <div class="left-box">
-                        <ul>
-                            <li><i class="fas fa-phone-alt"></i> <a href="tel:+7 8442 97 82 97"
-                                    class="font-serif">(8442) 97-82-97</a>
-                            </li>
-                            <li><i class="fas fa-envelope"></i> <a href="mailto:info@meyer-law.ru"
-                                    class="font-serif">info@meyer-law.ru</a></li>
-                        </ul>
-                    </div>
-                    <div class="right-box">
-                        <ul>
-                            <li><i class="fas fa-map-marker-alt font-serif"></i> 400001, г. Волгоград, ул. Профсоюзная,
-                                15а</li>
-                        </ul>
-                    </div>
-                </div>
+          <div class="container mx-auto">
+            <div class="flex flex-row">
+              <div class="left-box">
+                <ul>
+                  <li><i class="fas fa-phone-alt"></i> <a href="tel:+7 8442 97 82 97" class="font-serif">(8442) 97-82-97</a>
+                  </li>
+                  <li>
+                    <a href="tel:+7 8442 97-84-97">(8442) 97-84-97</a>
+                  </li>
+                  <li><i class="fas fa-envelope"></i> <a href="mailto:info@meyer-law.ru"
+                      class="font-serif">info@meyer-law.ru</a></li>
+                </ul>
+              </div>
+              <div class="right-box">
+                <ul>
+                  <li><i class="fas fa-map-marker-alt font-serif"></i> 400001, г. Волгоград, ул. Профсоюзная,
+                    15а</li>
+                </ul>
+              </div>
             </div>
+          </div>
         </section>
-
-
+    
+    
         <div class="container mx-auto"> <strong class="logo"><a href="index.html"><img src="../img/logo.png"
-                        alt="img"></a></strong>
-            <div class="navigation-right w-1/2">
-                <ul class="flex space-x-10">
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="index.html">
-                            О нас
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="ourSkill.html">
-                            Наш опыт
-                        </a>
-                    </li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-slate-800 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="news.html">
-                            Новости
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="interestsFacts.html">
-                            Интересные
-                            факты
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="http://www.meyer-law.ru/page/search">
-                            Поиск
-                        </a>
-                    </li>
-                </ul>
-                <ul class="flex space-x-10">
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="http://www.meyer-law.ru/page/probono">
-                            Pro bono
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="http://www.meyer-law.ru/page/reviews">
-                            Отзывы
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="http://www.meyer-law.ru/page/contests">
-                            Конкурс Мейера
-                        </a></li>
-                    <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600"
-                            href="http://www.meyer-law.ru/page/contact">
-                            Контакты
-                        </a></li>
-                </ul>
-            </div>
+                alt="img"></a></strong>
+          <div class="navigation-right whitespace-nowrap">
+            <ul class="flex space-x-0">
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="index.html">
+                    О нас
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="ourSkill.html">
+                    Наш опыт
+                </a>
+              </li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-slate-800  hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="news.html">
+                    Новости
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="interestsFacts.html">
+                    Интересные
+                    факты
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="search.html">
+                    Поиск
+                </a>
+              </li>
+            </ul>
+            <ul class="flex space-x-0">
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="proBono.html">
+                    Pro bono
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="reviews.html">
+                    Отзывы
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="conkursMayera.html">
+                 Конкурс «Мейера»
+                </a></li>
+              <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+                 transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="contacts.html">
+                    Контакты
+                </a></li>
+            </ul>
+          </div>
         </div>
-    </header>
+      </header>
 
 
     <div id="inner-banner">
@@ -469,25 +471,25 @@
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="bankruptcy.html">
                                             Банкротство</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="executiveLaw.html">
                                             Исполнительное право</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="arbitrationProcess.html">
                                             Арбитражный процесс</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="nalog.html">
                                             Налоговое право</a>
                                     </li>
                                 </ul>
@@ -499,25 +501,25 @@
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="constructionAndRealEstate.html">
                                             Строительство и недвижимость</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="antitrustRgulation.html">
                                             Антимонопольное регулирование</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="energy.html">
                                             Природные ресурсы. Энергетика</a>
                                     </li>
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
-                                            href="http://www.meyer-law.ru/page/practice-bank">
+                                            href="corporateLaw.html">
                                             Корпоративное право</a>
                                     </li>
                                 </ul>
@@ -543,7 +545,7 @@
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="cp-copyright-section"> <strong class="copy">Адвокаты, Волгоград<br>
-                                        Мейер и партнеры</strong> </div>
+                                    © «Мейер и партнеры»</strong> </div>
                             </div>
                         </div>
                     </div>
