--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
             <ul>
               <li><i class="fas fa-phone-alt"></i> <a href="tel:+7 8442 97 82 97" class="font-serif">(8442) 97-82-97</a>
               </li>
+              <li>
+                <a href="tel:+7 8442 97-84-97">(8442) 97-84-97</a>
+              </li>
               <li><i class="fas fa-envelope"></i> <a href="mailto:info@meyer-law.ru"
                   class="font-serif">info@meyer-law.ru</a></li>
             </ul>
@@ -42,38 +45,47 @@
 
     <div class="container mx-auto"> <strong class="logo"><a href="index.html"><img src="../img/logo.png"
             alt="img"></a></strong>
-      <div class="navigation-right w-1/2">
-        <ul class="flex space-x-10">
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-slate-800 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="index.html">
+      <div class="navigation-right whitespace-nowrap">
+        <ul class="flex space-x-0">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-slate-800 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="index.html">
                 О нас
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="ourSkill.html">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="ourSkill.html">
                 Наш опыт
             </a>
           </li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="news.html">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="news.html">
                 Новости
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="interestsFacts.html">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="interestsFacts.html">
                 Интересные
                 факты
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/page/search">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="search.html">
                 Поиск
             </a>
           </li>
         </ul>
-        <ul class="flex space-x-10">
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/page/probono">
+        <ul class="flex space-x-0">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="proBono.html">
                 Pro bono
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/page/reviews">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="reviews.html">
                 Отзывы
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/page/contests">
-                Конкурс Мейера
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="conkursMayera.html">
+             Конкурс «Мейера»
             </a></li>
-          <li><a class="font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800 transition duration-300 hover:no-underline hover:text-gray-600" href="http://www.meyer-law.ru/page/contact">
+          <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
+             transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="contacts.html">
                 Контакты
             </a></li>
         </ul>
@@ -283,25 +295,25 @@
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="bankruptcy.html">
 												Банкротство</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="executiveLaw.html">
 												Исполнительное право</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="arbitrationProcess.html">
 												Арбитражный процесс</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="nalog.html">
 												Налоговое право</a>
 										</li>
 									</ul>
@@ -313,25 +325,25 @@
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="constructionAndRealEstate.html">
 												Строительство и недвижимость</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="antitrustRgulation.html">
 												Антимонопольное регулирование</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="energy.html">
 												Природные ресурсы. Энергетика</a>
 										</li>
 										<li>
 											<i class="fas fa-square"></i>
 											<a class="font-serif text-2xl text-white font-semibold hover:text-white"
-												href="http://www.meyer-law.ru/page/practice-bank">
+												href="corporateLaw.html">
 												Корпоративное право</a>
 										</li>
 									</ul>
@@ -357,7 +369,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="cp-copyright-section"> <strong class="copy">Адвокаты, Волгоград<br>
-											Мейер и партнеры</strong> </div>
+                    © «Мейер и партнеры»</strong> </div>
 								</div>
 							</div>
 						</div>
