--- a/src/energy.html
+++ b/src/energy.html
@@ -173,32 +173,32 @@
                     <div class="cp-practice-area -mt-5">
                         <ul>
                             <li><a class="hover:bg-red-500" href="bankruptcy.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/bankrot.png">
+                                        src="../img/bankrot.png">
                                     Банкротство</a></li>
                             <li><a class="hover:bg-red-500" href="executiveLaw.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/ispolnit.png">
+                                        src="../img/ispolnit.png">
                                     Исполнительное право</a></li>
                             <li ><a class="hover:bg-red-500" href="arbitrationProcess.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/arbitrag.png">
+                                        src="../img/arbitrag.png">
                                     Арбитражный процесс</a></li>
                             <li ><a class="hover:bg-red-500" href="constructionAndRealEstate.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/stroika.png">
+                                        src="../img/stroika.png">
                                     Строительство и недвижимость</a></li>
                             <li><a class="hover:bg-red-500"
                                     href="antitrustRgulation.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/animonop.png">
+                                        src="../img/animonop.png">
                                     Антимонопольное регулирование</a></li>
                             <li class="rmenu-active"><a 
                                     href="energy.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/resurs.png">
+                                        src="../img/resurs.png">
                                     Природные ресурсы. Энергетика</a></li>
                             <li><a class="hover:bg-red-500"
                                     href="corporateLaw.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/corporat.png">
+                                        src="../img/corporat.png">
                                     Корпоративное право</a></li>
                             <li><a class="hover:bg-red-500"
                                     href="nalog.html"><img
-                                        src="http://www.meyer-law.ru/core/views/meyer/images/practic/nalogi.png">
+                                        src="../img/nalogi.png">
                                     Налоговое право</a></li>
                         </ul>
                     </div>
