--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -129,7 +129,7 @@
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/295">
                                 <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_d1aea1b1605890e785822157dc78a7cb.jpg">
+                                    src="../img/anounce_d1aea1b1605890e785822157dc78a7cb.jpg">
                             </a>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/296">
                                 <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_8d5bc3266789c99721e57a1a7687d163.jpg">
+                                    src="../img/anounce_8d5bc3266789c99721e57a1a7687d163.jpg">
                             </a>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                     <div class="columns-md-5">
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/297">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_26a226bde764cf571dd532e1a9ca9c29.jpg"></a>
+                                <img src="../img/anounce_26a226bde764cf571dd532e1a9ca9c29.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -223,7 +223,7 @@
                     <div class="columns-md-5">
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/309">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_5c2e2fe8d109cb13aa24823895168502.jpg"></a>
+                                <img src="../img/anounce_5c2e2fe8d109cb13aa24823895168502.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -251,7 +251,7 @@
                     <div class="columns-md-5">
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/310">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_f17ddb536b65762bb3a9bb81f19025e0.jpg"></a>
+                                <img src="../img/anounce_f17ddb536b65762bb3a9bb81f19025e0.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -281,7 +281,7 @@
                     <div class="columns-md-5">
                         <div>
                             <a href="http://www.meyer-law.ru/news/315">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/images/news-img.png"></a>
+                                <img src="../img/news-img.png"></a>
                         </div>
                     </div>
                     <div class="w-2/3">
@@ -312,7 +312,7 @@
                     <div class="columns-md-5">
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/335">
-                                <img src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_a52893945dd45d36219b95c5398a3428.jpg"></a>
+                                <img src="../img/anounce_a52893945dd45d36219b95c5398a3428.jpg"  style="width: 410px;"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -343,7 +343,7 @@
                         <div class="w-[410px]">
                             <a href="http://www.meyer-law.ru/news/336">
                                 <img
-                                    src="http://www.meyer-law.ru/core/views/meyer/upload/news/anounce_380ba0612f9c6f1718c9fc907c879916.jpg"></a>
+                                    src="../img/anounce_380ba0612f9c6f1718c9fc907c879916.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
@@ -377,7 +377,7 @@
                         <li class="active"><span class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">1</span></li>
-                        <li class="disabled"><span href="/news/all/2" class="text-center rounded-l-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
+                        <li class="disabled"><span class="text-center rounded-l-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">Дальше</span></li>
                     </ul>
