--- a/src/reviews.html
+++ b/src/reviews.html
@@ -9,7 +9,7 @@
 
     <link href="../dist/output.css" rel="stylesheet">
     <link href="../script.css" rel="stylesheet">
-    <link href="http://www.meyer-law.ru/core/views/meyer/css/color.css" rel="stylesheet" type="text/css">
+    <link href="../swiper/color.css" rel="stylesheet">
     <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="../swiper/tailwind.css">
     <link rel="stylesheet" href="../swiper/custom.css">
@@ -126,113 +126,113 @@
                         <ul style="position: relative; height: 2078.63px;">
                             <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/diplom-chambers.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/diplom-chambers.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/diplom-chambers.jpg" alt="img">
+                                <div class="caption"> <a href="../img/diplom-chambers.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>						
                             <li class="item col-md-3" style="position: absolute; left: 585px; top: 0px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/gramota-sportvoblago-2019.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/gramota-sportvoblago-2019.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/gramota-sportvoblago-2019.jpg" alt="img">
+                                <div class="caption"> <a href="../img/gramota-sportvoblago-2019.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 877px; top: 0px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/reiting_top_300_1_2017.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/reiting_top_300_1_2017.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/reiting_top_300_1_2017.jpg" alt="img">
+                                <div class="caption"> <a href="../img/reiting_top_300_1_2017.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>						
                             <li class="item col-md-3" style="position: absolute; left: 877px; top: 219px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/reiting_top_300_2_2017.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/reiting_top_300_2_2017.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/reiting_top_300_2_2017.jpg" alt="img">
+                                <div class="caption"> <a href="../img/reiting_top_300_2_2017.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>	
                             <li class="item col-md-3" style="position: absolute; left: 585px; top: 415px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/fond-podari-otziv.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/fond-podari-otziv.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/fond-podari-otziv.jpg" alt="img">
+                                <div class="caption"> <a href="../img/fond-podari-otziv.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>						
                             <li class="item col-md-3" style="position: absolute; left: 877px; top: 439px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/gramoti-2.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/gramoti-2.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/gramoti-2.jpg" alt="img">
+                                <div class="caption"> <a href="../img/gramoti-2.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>						
                             <li class="item col-md-3" style="position: absolute; left: 585px; top: 830px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/diplom-pravo.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/diplom-pravo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/diplom-pravo.jpg" alt="img">
+                                <div class="caption"> <a href="../img/diplom-pravo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>												
                             <li class="item col-md-3" style="position: absolute; left: 0px; top: 832px;">
                                 <div class="cp-box">
-                                <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/agm-meyer.jpg" alt="img">
-                                <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/agm-meyer.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                <div class="frame"> <img src="../img/agm-meyer.jpg" alt="img">
+                                <div class="caption"> <a href="../img/agm-meyer.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                 </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 292px; top: 832px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/apvo.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/apvo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/apvo.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/apvo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 877px; top: 854px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/blago-auto.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/blago-auto.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/blago-auto.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/blago-auto.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 585px; top: 1050px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/blago-meyer.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/blago-meyer.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/blago-meyer.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/blago-meyer.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 0px; top: 1247px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/delov-rus.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/delov-rus.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/delov-rus.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/delov-rus.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 292px; top: 1247px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/er-meip.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/er-meip.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/er-meip.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/er-meip.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 877px; top: 1269px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/kudo.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/kudo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/kudo.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/kudo.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 585px; top: 1465px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/sberbank.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/sberbank.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/sberbank.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/sberbank.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>
                             <li class="item col-md-3" style="position: absolute; left: 0px; top: 1663px;">
                                 <div class="cp-box">
-                                    <div class="frame"> <img src="http://www.meyer-law.ru/core/views/meyer/images/otziv/sberbank2.jpg" alt="img">
-                                    <div class="caption"> <a href="http://www.meyer-law.ru/core/views/meyer/images/otziv/sberbank2.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
+                                    <div class="frame"> <img src="../img/sberbank2.jpg" alt="img">
+                                    <div class="caption"> <a href="../img/sberbank2.jpg" data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i class="fas fa-search-plus"></i></a> </div>
                                     </div>
                                 </div>
                             </li>						
@@ -241,14 +241,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-
-
-
 
 
     <footer class="mt-24">
